static/style.css
body {
    padding: 0;
    background-color: #fffcf5;
    margin: 0;
}

.header-area {
    width: 100%;
    background-color: white;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 40px;
}

.webname {
    font-size: 24px;
    color: #5a5957;
    margin: 0;
    font-family: 'Public Sans', sans-serif;
}

.navbar {
    width: 100%;
    height: 120px;
    background-color: #b1a99d;
     display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 20px;
}


.signin-btn {
    background-color: #b1a99d;
    border: none;
    padding: 10px 20px;
    font-size: 16px;
    border-radius: 6px;
    cursor: pointer;
    color: white;
    margin-right: 20px;
}

.divider {
    width: 100%;
    height: 2px;
    background-color: #b1a99d;
    margin-top: 20px;
    margin-bottom: 50px;
}
.homepage {
    height: 500px;
    background-image: url('/static/images/monet.jpg');
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 20px;
}
.art-box {
    background-color: white;
    padding: 20px 40px;
    border-radius: 10px;
    text-align: center;
    box-shadow: #b1a99d 0px 4px 8px;
    margin-top: 400px;
}
.art-box h2 {
    font-size: 24px;
    color: #5a5957;
    margin-bottom: 20px;
    font-family: 'Public Sans', sans-serif;
}

.art-box p {
    font-size: 16px;
    color: #5a5957;
    margin-bottom: 20px;
    font-family: 'Public Sans', sans-serif;
}

.inner-divider {
    width: 100%;
    height: 1px;
    background-color: #b1a99d;
    margin-top: 20px;
}

.info-section {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0px;
    gap: 0px;
    background-color: #f7eddd;
    margin-top: 200px;
}

.info-text {
    flex: 1;
    max-width: 60%;
    text-align: center;
    font-size: 25px;
    line-height: 1.6;
    background-color: #f7eddd;
    padding: 20px;
    border-radius: 8px;
    margin-left: 40px;
    
}


.sample-image  img {
    width: 250px;
    height: auto;
    border-radius: 8px;

}

.gallery-categories {
    text-align: center;
    background-color: #fffcf5;
    padding: 60px 40px;
}

.gallery-categories h2 {
    font-size: 32px;
    font-weight: 700px;
    color: #5a5957;
}

.gallery-categories p {
    font-size: 20px;
    color: #5a5957;
    margin-bottom: 50px;
}

.category-container {
    display: flex;
    justify-content: center;
    gap: 40px;
    flex-wrap: wrap;
}

.category-box {
    background-color: #b1a99d;
    width: 300px;
    padding: 20px;
    border-radius: 8px;
    text-align: center;
}

.category-box h3 {
    font-size: 20px;
    color: #5a5957;
    margin-bottom: 20px;
}
.category-image{
    background-color: #f7eddd;
    width: 100%;
    height: 250px;
    overflow: hidden;
    border-radius: 8px;
    display: flex;
    justify-content: center;
    align-items: center;

}
.category-image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 8px;
}


.discover-btn {
    border-color: #bfc5c7;
    color: white;
    font-weight: 700;
    border: none;
    padding: 15px;
    border-radius: 8px;
    cursor: pointer;
    transition: background-color 0.3s;
}

.discover-btn:hover {
    background-color: #9FA3A5;
}

